Fix broken CSS file link in NarBar and set @media query
Inadvertantly carried over ':' from JSX in the Css files so #id not
picking up styles.  Setting base style and then doing mobile first,
so will use min-width.

Using Grid styling in the CSS sheet (only).  Will contain the rest
of the component styling in components. *that's the plan, anyways*.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,7 @@
 .App-logo {
   animation: App-logo-spin infinite 7s linear;
-  height: 50px;
+  /*height: 30px;*/
+  color: lightgrey;
 }
 
 .App {
@@ -26,7 +27,6 @@
 
 /* engraving effect */
 .engr { 
-	color:grey;
   text-shadow: 
     0px 1px 0px rgba(255,255,255,.1), 
     0px -1px 0.5px rgba(0,0,0,.7);
