--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,37 +1,70 @@
-/*grid: {
-		display: 'grid',
-		gridTemplateAreas:`"logo welcome ... home todos login" `
-	},
+/* A responsize navbar */
+#NavGrid {
+	display: grid;
+	grid-template-areas: "logo welcome ... home todos login" ;
+}
 
-	logo: {
-		gridArea: 'logo',
-		fontSize: '0.5em',
-	},
 
-	welcome: {
-		gridArea: 'welcome',
-	},
+#logo_link {
+		grid-area: logo;
+		font-size: 0.5em;
+	}
 
-	home: {
-		gridArea: 'home',
-	},
+	#welcome_link {
+		grid-area: welcome;
+	background: yellow;
 
-	todos: {
-		gridArea: 'todos',
-	},
+	}
 
-	login: {
-		gridArea: 'login',
-	},
+	#home_link {
+		grid-area: home;
+		color: lime;
+	}
 
-	logout:{
-		gridArea: 'login',
-		color: 'lime', 
-	},
+	#todos_link {
+		grid-area: todos;
+	}
 
-	base: {
-		color: 'lightblue', 
-		textAlign: 'center' 
-	},
+	#login_link {
+		grid-area: login;
+	}
 
-};*/
+	#logout_link {
+		grid-area: login;
+		color: lime; 
+	}
+
+
+@media screen and (min-width: 650px) { 
+
+	#logo_link {
+		grid-area: logo;
+		font-size: 0.5em;
+	}
+
+	#welcome_link {
+		grid-area: welcome;
+	background: lime;
+
+	}
+
+	#home_link {
+		grid-area: home;
+		color: lime;
+	}
+
+	#todos_link {
+		grid-area: todos;
+	}
+
+	#login_link {
+		grid-area: login;
+	}
+
+	#logout_link {
+		grid-area: login;
+		color: lime; 
+	}
+}
+
+
